Gore: add Groups to API
