# gore/api/handlers/store.py
@@ -37,7 +37,10 @@ def store_event(request, project):
     timestamp = make_aware(datetime.fromtimestamp(float(auth_header['sentry_timestamp'])), timezone=UTC)
     with transaction.atomic():
         event = Event.objects.create_from_raven(project_id=project, body=body, timestamp=timestamp)
-        group_event(event.project, event)
+        group = group_event(event.project, event)
+        group.archived = False
+        group.cache_values()
+        group.save()
     try:
         event_received.send(sender=event)
     except:  # pragma: no cover
