# gore/api/schemata.py
@@ -1,9 +1,30 @@
 from marshmallow import Schema, fields
 
 
-class EventSchema(Schema):
+class EventGroupSubSchema(Schema):
     class Meta:
-        fields = ('id', 'message', 'culprit', 'level', 'type', 'timestamp', 'project_id', 'archived')
+        fields = ('id', 'group_hash', 'first_event_time', 'last_event_time', 'n_events', 'archived')
+
+
+class EventSchema(Schema):
+    group = fields.Nested(EventGroupSubSchema)
+
+    class Meta:
+        fields = ('id', 'message', 'culprit', 'level', 'type', 'timestamp', 'project_id', 'archived', 'group')
+
+
+class EventGroupListSchema(EventGroupSubSchema):
+    first_event = fields.Nested(EventSchema, exclude=('group',))
+
+    class Meta:
+        fields = EventGroupSubSchema.Meta.fields + ('first_event',)
+
+
+class EventGroupDetailSchema(EventGroupListSchema):
+    events = fields.Nested(EventSchema, exclude=('group',), many=True)
+
+    class Meta:
+        fields = EventGroupListSchema.Meta.fields + ('events',)
 
 
 class ProjectSchema(Schema):
@@ -13,10 +34,11 @@ class ProjectSchema(Schema):
 
 class EventDetailSchema(Schema):
     project = fields.Nested(ProjectSchema)
+    group = fields.Nested(EventGroupSubSchema)
     data = fields.Method(serialize='get_data')
 
     class Meta:
-        fields = ('id', 'message', 'culprit', 'level', 'type', 'timestamp', 'project', 'data', 'archived')
+        fields = EventSchema.Meta.fields + ('project',)
 
     def get_data(self, instance):
         return instance.data_dict
