# gore/api/swagger.yaml
@@ -41,6 +41,9 @@ paths:
     - name: search
       in: query
       type: string
+    - name: group
+      in: query
+      type: integer
     - name: limit
       in: query
       type: integer
@@ -83,3 +86,56 @@ paths:
           description: "event object"
         404:
           description: "event not found"
+  "/groups/":
+    parameters:
+    - name: project
+      in: query
+      type: string
+    - name: type
+      in: query
+      type: string
+    - name: search
+      in: query
+      type: string
+    - name: limit
+      in: query
+      type: integer
+      default: 50
+    - name: offset
+      in: query
+      type: integer
+      default: 0
+    - name: archived
+      in: query
+      type: boolean
+    get:
+      operationId: "getGroupList"
+      responses:
+        200:
+          description: "object of total/limit/offset/groups"
+  "/group/{id}/":
+    parameters:
+    - name: id
+      in: path
+      type: string
+      required: true
+    get:
+      operationId: "getGroupDetail"
+      responses:
+        200:
+          description: "group object"
+        404:
+          description: "group not found"
+  "/group/{id}/archive/":
+    parameters:
+    - name: id
+      in: path
+      type: string
+      required: true
+    post:
+      operationId: "archiveGroup"
+      responses:
+        200:
+          description: "group object"
+        404:
+          description: "group not found"
